FiveTuple class complete